--- a/RomHeredia/Views/Home/Index.cshtml
+++ b/RomHeredia/Views/Home/Index.cshtml
@@ -2,6 +2,16 @@
     ViewData["Title"] = "Home Page";
 }
 
+
+
+<section id="about" class="text-center">
+    <div class="container">
+        <img src="images\about-img.jpg" class="rounded-circle">
+        <h1>Hello! Welcome to my Webpage.</h1>
+        <p class="card-body">I'm Romeric. <br />Full stack developer. Comic book reader. ProWrestling fan. <br /> Nomad. Filipino based in Auckland.</p>
+    </div>
+</section>
+
 <article id="currentProjects">
     <div class="container">
         <h1>Current Projects</h1>
@@ -12,21 +22,21 @@
     <div class="container">
         <div class="row">
             <div class="col-lg-6">
-                <div class="skills-header"><i class="fab fa-uikit"></i> UI/UX</div>
+                <div class="skills-header"><i class="fab fa-uikit text-warning"></i> UI/UX</div>
                 <p>
                     Phasellus quam neque, consectetur at efficitur nec, porttitor eget metus. Sed tempus suscipit est,
                     consectetur hendrerit orci commodo sit amet.
                 </p>
             </div>
             <div class="col-lg-6">
-                <div class="skills-header"><i class="fas fa-code"></i> Frontend</div>
+                <div class="skills-header"><i class="fas fa-code text-danger"></i> Frontend</div>
                 <p>
                     Phasellus quam neque, consectetur at efficitur nec, porttitor eget metus. Sed tempus suscipit est,
                     consectetur hendrerit orci commodo sit amet.
                 </p>
             </div>
             <div class="col-lg-6">
-                <div class="skills-header"><i class="fas fa-cogs"></i> Backend</div>
+                <div class="skills-header"><i class="fas fa-cogs text-success"></i> Backend</div>
                 <p>
                     Phasellus quam neque, consectetur at efficitur nec, porttitor eget metus. Sed tempus suscipit est,
                     consectetur hendrerit orci commodo sit amet.
@@ -34,7 +44,7 @@
             </div>
 
             <div class="col-lg-6">
-                <div class="skills-header"><i class="fas fa-database"></i> Database</div>
+                <div class="skills-header"><i class="fas fa-database text-info"></i> Database</div>
                 <p>
                     Phasellus quam neque, consectetur at efficitur nec, porttitor eget metus. Sed tempus suscipit est,
                     consectetur hendrerit orci commodo sit amet.
